# django_bootstrap5

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  apps.py  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
django_bootstrap5/: __init__.py  apps.py  tests.py
django_bootstrap5/static/css/: bootstrap.min.css.map  django-bootstrap5.css  jquery-ui.min.css  jquery-ui.structure.min.css  jquery-ui.theme.min.css
django_bootstrap5/static/js/: btn-toggle.js  jquery-ui.min.js
django_bootstrap5/templates/bootstrap/: iframe_form_modal.html  pagination.html
django_bootstrap5/templates/bootstrap/form/: base.html  horizontal.html
django_bootstrap5/templatetags/: __init__.py  bootstrap.py
templates/bootstrap/: css.html  js.html  messages.html  pagination.html  sortable_th.html
templates/bootstrap/form/: _inlineformset.html  base.html  horizontal.html  inline.html  vertical.html
templatetags/: __init__.py  bootstrap.py
