[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "django_bootstrap5"
version = "0.3.15"
authors = [
    {name = "J. Nathanael Philipp", email = "nathanael@philipp.land"}
]
description="Add Bootstrap 5 to Django."
readme = "README.md"
license = {text = "GPLv3+"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "bootstrap", "bootstrap 5"]


[project.urls]
"Homepage" = "http://github.com/jnphilipp/django_bootstrap5"
"Bug Tracker" = "http://github.com/jnphilipp/django_bootstrap5/issues"

[tool.setuptools]
packages = [
    "django_bootstrap5",
    "django_bootstrap5.static",
    "django_bootstrap5.static.css",
    "django_bootstrap5.static.css.images",
    "django_bootstrap5.static.js",
    "django_bootstrap5.static.js.i18n",
    "django_bootstrap5.templates.bootstrap",
    "django_bootstrap5.templates.bootstrap.form",
    "django_bootstrap5.templatetags",
]

[tool.setuptools.package-data]
django_bootstrap5 = [
    "py.typed",
    "static/*",
    "static/css/*",
    "static/css/images/*",
    "static/js/*",
    "static/js/i18n/*",
    "templates/bootstrap/*",
    "templates/bootstrap/form/*",
]
